Added updated generate_data.cpp

--- a/src/Makefile
+++ b/src/Makefile
@@ -6,7 +6,7 @@ PROG = CapstoneQuery
 PROG2 = NavarroCompress
 .SUFFIXES: .o .cpp
 
-all: $(PROG) $(PROG2)
+all: $(PROG) $(PROG2) GenerateData
 
 .cpp.o:
 	$(CXX) $(CFLAGS) -c -o $@ $<
@@ -16,6 +16,9 @@ $(PROG): $(OBJS)
 
 $(PROG2): $(OBJS2)
 	$(CXX) $(CFLAGS) -o $@ $(OBJS2)
+
+GenerateData: generate_data.o
+	$(CXX) $(CFLAGS) -o $@ generate_data.o
 
 clean:
 	/bin/rm -f *.o *~
